--- a/build.gradle
+++ b/build.gradle
@@ -6,26 +6,13 @@ apply plugin: 'java'
 apply plugin: 'jacoco'
 
 jacocoTestReport {
+  dependsOn 'test'
   reports {
     xml.enabled true
     html.enabled true
     html.destination "${buildDir}/reports/jacoco/html/"
   }
 }
-
-//jacocoTestReport {
-//  reports {
-//    xml.enabled true
-//    html.enabled true
-//    html.destination "${buildDir}/reports/jacoco/html/"
-//  }
-//
-//  def classFileTree = fileTree(dir: "${buildDir}/classes")
-//
-//  classDirectories = files([classFileTree])
-//  sourceDirectories = files("${project.projectDir}/src/main/java")
-//  executionData = files("${buildDir}/jacoco/test.exec")
-//}
 
 repositories {
   jcenter()
